--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,6 @@ services:
   repo: https://github.com/simongemmill/simongemmill
   plan: free
   region: oregon
-  buildCommand: ""
-  startCommand: gunicorn --worker-class eventlet -w 1 app:app
+  buildCommand: ""  start
+  Command: gunicorn app:app
   autoDeployTrigger: commit
