--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,21 @@
-name: Auto Deploy to Render
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Deploy to Render
-        uses: JorgeLNJunior/render-deploy@v1.4.5
-        with:
-          service_id: ${{ secrets.srv-d3dbmri4d50c73d8mmcg }}
-          api_key: ${{ secrets.rnd_FAsoP6iRexeJ99oArbOFqnreyHuz }}
-          github_deployment: true
-          deployment_environment: production
+version: "1"
+projects:
+- name: ptquiz
+  environments:
+  - name: Production
+    services:
+    - type: web
+      name: flask-dashboard
+      runtime: static
+      repo: https://github.com/simongemmill/flask-dashboard
+      envVars:
+      - key: .env
+        sync: false
+      - key: red-d3cfita4d50c73cgu7kg
+        sync: false
+      - fromGroup: https://flask-dashboard-6gef.onrender.com
+      - fromGroup: dashboard-env
+      - fromGroup: dashboard-env-6web
+      buildCommand: pip install -r requirements.txt
+      staticPublishPath: frontend/build
+      autoDeployTrigger: commit
